-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9, 10
-
Component/s: hotspot
-
b33
-
s390x
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8193083 | 9.0.6 | Martin Doerr | P2 | Resolved | Fixed | master |
| JDK-8193084 | 9.0.4 | Martin Doerr | P2 | Closed | Fixed | b09 |
The s390 implementation misses a couple of small fixes which exist on other platforms.
- backported by
-
JDK-8193083 s390: Some java boolean checks are not correct
-
- Resolved
-
-
JDK-8193084 s390: Some java boolean checks are not correct
-
- Closed
-