8190285: s390: Some java boolean checks are not correct

Reviewed-by: lucy, coleenp